--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "github": "^0.2.4",
     "mongoose": "^4.0.6",
     "request": "^2.58.0",
+    "serve-favicon": "^2.3.0",
     "tween": "^0.9.0"
   }
 }
